# salao-conecta

./: .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
manager/: models.py  serializers.py
manager/management/commands/: populate_geo.py
manager/migrations/: 0001_initial.py
salao_conecta/: asgi.py  settings.py  urls.py  wsgi.py
