[project]
name = "salao-conecta"
version = "0.1.0"
description = "Sistema de gerenciamento para salões de beleza"
authors = [
    { name = "João Vitor", email = "joaovitor.monteiro.188@gmail.com" },
]
license = { text = "MIT" }
readme = "README.md"
keywords = ["salao", "beleza", "gerenciamento", "django"]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Framework :: Django",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.6",
    "djangorestframework>=3.16.1",
    "djoser>=2.3.3",
    "drf-nested-routers>=0.94.2",
    "pillow>=11.3.0",
    "psycopg2>=2.9.10",
    "python-decouple>=3.8",
    "requests>=2.32.5",
]
